--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@chakra-ui/react": "^2.2.1",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "firebase": "8.1",
     "framer-motion": "^6.3.12",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
